feat: initial persistence

--- a/app/styles/components/editor.scss
+++ b/app/styles/components/editor.scss
@@ -6,7 +6,10 @@
 
   --cm-gutter-backgroundColor: var(--octotask-elements-editor-gutter-backgroundColor, var(--cm-backgroundColor));
   --cm-gutter-textColor: var(--octotask-elements-editor-gutter-textColor, var(--octotask-elements-textSecondary));
-  --cm-gutter-activeLineTextColor: var(--octotask-elements-editor-gutter-activeLineTextColor, var(--cm-gutter-textColor));
+  --cm-gutter-activeLineTextColor: var(
+    --octotask-elements-editor-gutter-activeLineTextColor,
+    var(--cm-gutter-textColor)
+  );
 
   /* Fold Gutter */
 
@@ -41,7 +44,10 @@
 
   --cm-search-backgroundColor: var(--octotask-elements-editor-search-backgroundColor, var(--cm-backgroundColor));
   --cm-search-textColor: var(--octotask-elements-editor-search-textColor, var(--octotask-elements-textSecondary));
-  --cm-search-closeButton-backgroundColor: var(--octotask-elements-editor-search-closeButton-backgroundColor, transparent);
+  --cm-search-closeButton-backgroundColor: var(
+    --octotask-elements-editor-search-closeButton-backgroundColor,
+    transparent
+  );
 
   --cm-search-closeButton-backgroundColorHover: var(
     --octotask-elements-editor-search-closeButton-backgroundColorHover,
@@ -68,7 +74,10 @@
     var(--octotask-elements-item-backgroundActive)
   );
 
-  --cm-search-button-textColor: var(--octotask-elements-editor-search-button-textColor, var(--octotask-elements-textSecondary));
+  --cm-search-button-textColor: var(
+    --octotask-elements-editor-search-button-textColor,
+    var(--octotask-elements-textSecondary)
+  );
 
   --cm-search-button-textColorHover: var(
     --octotask-elements-editor-search-button-textColorHover,
@@ -84,8 +93,14 @@
   );
 
   --cm-search-input-backgroundColor: var(--octotask-elements-editor-search-input-backgroundColor, transparent);
-  --cm-search-input-textColor: var(--octotask-elements-editor-search-input-textColor, var(--octotask-elements-textPrimary));
-  --cm-search-input-borderColor: var(--octotask-elements-editor-search-input-borderColor, var(--octotask-elements-borderColor));
+  --cm-search-input-textColor: var(
+    --octotask-elements-editor-search-input-textColor,
+    var(--octotask-elements-textPrimary)
+  );
+  --cm-search-input-borderColor: var(
+    --octotask-elements-editor-search-input-borderColor,
+    var(--octotask-elements-borderColor)
+  );
 
   --cm-search-input-borderColorFocused: var(
     --octotask-elements-editor-search-input-borderColorFocused,
